<resources>
    <string name="app_name">HotelFamily</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello take out fragment</string>
    <string name="hot_fragment">hot fragment</string>
    <string name="take_out_fragment">take out fragment</string>
    <string name="book_fragment">book fragment</string>
    <string name="about_us_fragment">about us fragment</string>

    <string name="lucky">攒人品</string>
    <string name="desk_number">桌号</string>
    <string name="select_desk_number">选择桌号</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="retrieve_password">找回密码?</string>
    <string name="login">登录</string>
    <string name="number_of_diners">用餐人数</string>
    <string name="select_number_of_diners">选择用餐人数</string>
    <string name="consumer_phone">客户电话</string>
    <string name="confirm">确定</string>
    <string name="done">完成</string>
    
</resources>
